tests/diagnostics_golden/diag_result_unguarded.txt
Diagnostics Golden: Result Unguarded
Source: tests/negative/neg_result_unguarded.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_result_unguarded.safe:32:14: error: access to variant field 'value' requires established discriminant 'ok'
  |
  | 32 |       return r.value;  -- REJECTED: R.OK not established
  |    |              ^~~~~~~
  |
  note: the discriminant 'ok' was not established on all paths before this access.
------------------------------------------------------------------------
